@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor #F8FBFF
    BorderColor #1F5F99
    ArrowColor #1F5F99
}

title Strategy Pattern - BlueWear Discount System

interface IDiscountStrategy {
    + Name : string
    + Description : string
    + CalculateDiscount(productsTotal : decimal) : decimal
}

class NoDiscountStrategy {
    + Name : string
    + Description : string
    + CalculateDiscount(productsTotal : decimal) : decimal
}

class NewCustomerDiscountStrategy {
    + Name : string
    + Description : string
    + CalculateDiscount(productsTotal : decimal) : decimal
}

class StudentDiscountStrategy {
    + Name : string
    + Description : string
    + CalculateDiscount(productsTotal : decimal) : decimal
}

class VipDiscountStrategy {
    + Name : string
    + Description : string
    + CalculateDiscount(productsTotal : decimal) : decimal
}

class DiscountCalculator {
    - discountStrategy : IDiscountStrategy
    + StrategyName : string
    + StrategyDescription : string
    + CalculateDiscount(productsTotal : decimal) : decimal
    + CalculateTotalAfterDiscount(productsTotal : decimal) : decimal
}

class StoreController {
    + Checkout() : IActionResult
    + Checkout(customerName, address, orderType, deliveryMethod, discountType) : IActionResult
    - CreateDiscountStrategy(discountType : string) : IDiscountStrategy
    - ConfigureStrategyViewData(...) : void
}

IDiscountStrategy <|.. NoDiscountStrategy
IDiscountStrategy <|.. NewCustomerDiscountStrategy
IDiscountStrategy <|.. StudentDiscountStrategy
IDiscountStrategy <|.. VipDiscountStrategy

DiscountCalculator o-- IDiscountStrategy : uses

StoreController ..> DiscountCalculator : creates
StoreController ..> IDiscountStrategy : selects strategy

@enduml